--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/home.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
 <body>
+    <!--start header-->
     <header class="header">
         <div class="container">
             <div class="row">
@@ -19,8 +22,8 @@
                     <a href="#">mangcoding Store</a>
                 </div>
                 <i class="fa-solid fa-bars menu"></i>
-                <nav class="nav"> 
-                  
+                <nav class="nav">
+
                     <ul>
                         <li>
                             <a href="#" class="select">Home</a>
@@ -49,6 +52,78 @@
             </div>
         </div>
     </header>
+    <!--end header-->
+    <!--start footer-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="start-footer">
+                    <div class="logo">
+                        <img src="./assets/img/Logo.svg" alt="logo" />
+                        <a href="#">mangcoding Store</a>
+                        
+                    </div>
+                    <div class="paragraf">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque sapiente, voluptatum
+                            doloremque ducimus voluptatibus facilis nihil similique incidunt quos aliquam excepturi
+                            labore eaque necessitatibus reprehenderit, obcaecati harum accusamus? Dolor minus cum totam
+                            voluptatum culpa et aliquid repellendus laborum id provident.</p>
+
+                    </div>
+                    <div class="icon">
+                        <img src="./assets/img/public/facebook.svg " alt="facebook" />
+                        <img src="./assets/img/public/Twitter.svg" alt="twitter" />
+                        <img src="./assets/img/public/linkedIn.svg" alt="linkedIn" />
+                        <img src="./assets/img/public/instagram.svg" alt="instagram" />
+                    </div>
+                </div>
+
+                <div class="end-footer">
+                    <div class="items">
+                        <h2>Home</h2>
+                        <nav class="nav">
+                            <ul>
+                                <li><a href="#">Product</a></li>
+                                <li><a href="#">Course</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Log in</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                    <div class="items">
+                        <h2>Course</h2>
+                        <nav class="nav">
+                            <ul>
+                                <li><a href="#">HTML & CSS </a></li>
+                                <li><a href="#">Javascript</a></li>
+                                <li><a href="#">Fotographer</a></li>
+                                <li><a href="#">Desain Grafis</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="items">
+                        <h2>Article</h2>
+                        <nav class="nav">
+                            <ul>
+                                <li><a href="#">New</a></li>
+                                <li><a href="#">Old</a></li>
+                                <li><a href="#">Trend </a></li>
+                                <li><a href="#">Popular </a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="items">
+                        <h2>Contact Us</h2>
+                        <nav class="nav">
+                            <a href="#">CCdoc123@gmail.com </a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--end footer-->
 </body>
 
 </html>
