creat section five

--- a/index.html
+++ b/index.html
@@ -54,6 +54,105 @@
     </header>
     <!--end header-->
     <main>
+        <!--start section four--> 
+        <section class="courses">
+        <div class="container">
+            <div class="row">
+                <div class="start-sectionCourses">
+            <div class="course">
+                <div class="course-img">
+                    <img src="./assets/img/courses/html-css.png" alt="html and css"/>
+                    <div class="cost-det">
+                    <span class="best">best course</span>
+                    <span class="cost">$ 20 USD</span>
+                </div>
+                </div>
+                <div class="course-info">
+                    <div class="course-type">
+                        <h2>HTML & CSS</h2>
+                        <span>1,500 Views</span>
+                    </div>
+                    <div class="detailse">
+                        <span>120 Videos</span>
+                        <span>2 Teacher</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="course">
+                <div class="course-img">
+                    <img src="./assets/img/courses/photographer.png" alt="photographer"/>
+                    <div class="cost-det">
+                        <span class="best">best course</span>
+                        <span class="cost">$ 20 USD</span>
+                    </div>
+
+                </div>
+                <div class="course-info">
+                    <div class="course-type">
+                        <h2>photographer</h2>
+                        <span>1,500 Views</span>
+                    </div>
+                    <div class="detailse">
+                        <span>120 Videos</span>
+                        <span>2 Teacher</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="course">
+                <div class="course-img">
+                    <img src="./assets/img/courses/java-script.png" alt="java-script"/>
+                    <div class="cost-det">
+                        <span class="best">best course</span>
+                        <span class="cost">$ 20 USD</span>
+                    </div>
+
+                </div>
+                <div class="course-info">
+                    <div class="course-type">
+                        <h2>java-script</h2>
+                        <span>1,500 Views</span>
+                    </div>
+                    <div class="detailse">
+                        <span>120 Videos</span>
+                        <span>2 Teacher</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="course">
+                <div class="course-img">
+                    <img src="./assets/img/courses/desain-Grafis.png" alt="desain-Grafis"/>
+                    <div class="cost-det">
+                        <span class="best">best course</span>
+                        <span class="cost">$ 20 USD</span>
+                    </div>
+                </div>
+                <div class="course-info">
+                    <div class="course-type">
+                        <h2>desain-Grafis</h2>
+                        <span>1,500 Views</span>
+                    </div>
+                    <div class="detailse">
+                        <span>120 Videos</span>
+                        <span>2 Teacher</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="end-sectionCourses">
+                <span>AVAILABLE FOR YOU</span>
+                <h2>Available Courses</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                <a href="#">See all</a>
+            </div>
+            </div>
+        </div>
+    </section>
+        <!--start section four-->  
+
+        <!--start section five-->
         <section class="Testimonials">
             <div class="container">
                 <h2>Testimonials</h2>
@@ -156,6 +255,7 @@
                 </div>
           
         </section>
+         <!--end section five-->
     </main>
     <!--start footer-->
     <footer>
@@ -226,6 +326,7 @@
         </div>
     </footer>
     <!--end footer-->
+  
 </body>
 
 </html>
