--- a/index.html
+++ b/index.html
@@ -77,15 +77,59 @@
                             <img src="./assets/img/people/group1.png" alt="group"/>
                         </div>
                     </div>
+                    </div>
             </div>
         </section>
         <!--end first section-->
+        <!--start secound section-->
+        <section class="what-we-give">
+         <div class="container">
+            <div class="rowColumn">
+                <div class="upper-section">
+                    <div class="row">
+                <div class="start-section-what-we-give">
+                    <span>WHAT WE GIVE</span>
+                    <h2>What do You Get From Us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                </div>
+                <div class="end-section-what-we-give">
+                    <div class="option" >
+                        <i class="fa-solid fa-user user"></i>
+                        <h3>Professional Teacher</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                    </div >
+                    <div class="option" >
+                        <i class="fa-solid fa-graduation-cap graduation"></i>
+                        <h3>Course Certificate</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                    </div >
+                    <div class="option">
+                        <i class="fa-solid fa-award icon award"></i>
+                        <h3>interesting learning</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                    </div >
+                    <div class="option">
+                        <i class="fa-solid fa-play icon play-vedio"></i>
+                        <h3>120 Videos Course</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                    </div >
+                </div>
+            </div>
+            </div>
+            <div class="lower-section">
+                <i class="fa-solid fa-circle-chevron-right fa-flip-horizontal"></i>
+                <i class="fa-solid fa-circle-chevron-right"></i>
+            </div>
+            </div>
+         </div>
+        </section>
+        <!--end secound section-->
            <!--start section third-->
     <section class="taking-course">
         <div class="container">
             <div class="row">
                 <div class="image">
-                    <img src="./assets/img/people/group.png" ale="group"/>
+                    <img src="./assets/img/people/group.png" alt="group"/>
                 </div>
 
                 <div  class="selected-course">
